# Honey_Ecommerce

./: .env  .gitignore  LICENSE  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
db/: backup.sql
nginx/: default.conf
scripts/: initializer.sh
src/: initializer.sh  manage.py
src/Honey_Bun/: asgi.py  settings.py  urls.py  wsgi.py
src/browser/: urls.py  views.py
src/myapp/: models.py
src/myapp/migrations/: 0001_initial.py
src/template/: index.html
src/template/snippets/: search_bar.html
